# crypto-derivs-trade-tracker

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_api.py  test_models.py  test_services.py  test_setup.py
app/: config.py  main.py
app/api/: trades.py
app/models/: trade.py
app/schemas/: trade.py
app/services/: cache_service.py  trade_service.py
tests/: conftest.py  test_api_complete.py  test_services_complete.py
